[package]
name = "nvjpeg-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59"
pkg-config = "0.3"

[features]
default = [ "cuda-11-1" ]
cuda-10-2 = []
cuda-11-1 = []
cuda-11-4 = []
